# jumaya-meta-agent-platform

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.dev.yml
.github/agents/: meta-agent.agent.md
.github/workflows/: cd-deploy.yml  ci-agents.yml  ci-services.yml
agents/: test_architect.py  test_engine.py  test_multi_skills.py  test_search.py
agents/architect/: Dockerfile  README.md  agent.py  instructions.py  pyproject.toml
agents/coder/: Dockerfile  README.md  agent.py  instructions.py  pyproject.toml
agents/devops/: Dockerfile  README.md  agent.py  instructions.py  pyproject.toml
agents/orchestrator/: Dockerfile  README.md  agent.py  factory.py  pipelines.py  pyproject.toml
agents/security/: Dockerfile  README.md  agent.py  instructions.py  pyproject.toml
agents/shared/: pyproject.toml
agents/shared/config/: model_presets.py  settings.py  whitelist_seed.py
agents/shared/services/context/: project_context.py  session_manager.py
agents/shared/services/llm/: __init__.py  github_models.py
agents/shared/services/persistence/: models.py  mongodb.py
agents/shared/services/skill_resolution/: cache.py  engine.py  extractor.py  web_search.py  whitelist.py
agents/shared/tools/: audit_logger.py  file_generator.py  project_context.py  skill_search.py
agents/tester/: Dockerfile  README.md  agent.py  instructions.py  pyproject.toml
docs/: ARCHITECTURE.md  DECISIONS.md  SETUP.md
k8s/base/: kustomization.yaml  namespace.yaml
services/: MetaAgent.sln
services/MetaAgent.CloudAnalyzer/: Dockerfile  Program.cs  README.md  (+1 more)
(+50 files in other folders)
