[build-system]
requires = ["setuptools>=68", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meta-agent-shared"
version = "0.1.0"
description = "Shared utilities for Meta AI Agent Platform"
requires-python = ">=3.12"
dependencies = [
    "google-adk[a2a]>=0.5.0",
    "litellm>=1.40.0",
    "motor>=3.4.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "html2text>=2024.2.26",
    "pymongo>=4.7.0",
    "duckduckgo-search>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["shared*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
